src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #020202;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: grid;
  place-items: center;
  min-width: 350px;
  min-height: 50vh;
  font-size: 1em;
  line-height: 1.5;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  color: rgb(123, 55, 168);
}

h2 {
  color: rgb(137, 21, 245);
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

#root {
  max-width: 1200px;
  margin: 0 auto;
  padding: 1rem;
  text-align: center;
  /* border: 3px solid rgb(24, 116, 255); */
}
.form{
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 10px;
  margin: 0 20px;
  /* border: 3px solid rgb(24, 116, 255); */
  /* background-color: rgb(116, 235, 36); */
}
.inputs{
  display:flex;
  justify-content: center;
}

label{
  position:absolute;
}

input, select{
  width: auto;
  padding: 5px;
  margin: 20px 0;
  border-radius: 10px;
  /* border: 2px solid rgb(110, 0, 212); */

}

#sets, #reps, #amount, #rest{
  width: 80px;
  flex-grow: inherit;
}
.bar {
  height: 30px;
  justify-items: center;
  align-self: center;
}
span{
  font-weight: bold;
}
#data{
  display: flex;
  flex-wrap: wrap;
  justify-content:center ;
  align-content: center;
  gap: 10px;
  max-width:1050px;
  height: fit-content;
  margin: 20px;
  padding:20px;
  /* border: 3px solid rgb(24, 116, 255); */
  /* background-color: rgb(3, 214, 144); */
}
#data > div{
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: top;
  align-items: center;
  gap: 15px;
  width:330px;
  height:fit-content;
  min-height: 250px;
  /* border: 3px solid rgb(248, 116, 64); */
  background-color: rgb(235, 215, 252);
}
#data > div > div{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  width:auto;
  height:auto;
  /* border: 3px solid rgb(138, 194, 9); */

}
.exfin{
  font-style: italic;
  font-weight: bold;
  text-decoration: line-through;
  text-decoration-thickness: 2.5px;
  color:rgb(184, 177, 177);
}
/*---------------------Buttons-------------------*/
button{
  width:auto;
  border-radius: 10px;
  border: 2px solid transparent;
  padding: 0.6em 1.2em;
  align-self: center;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #b018ec;
  cursor: pointer;
  transition: border-color 0.7s;
}
button:hover {
  border-color: #013b10;
  background-color: #28da04;
}
#submit-btn {
  color:rgb(255, 230, 0) ;
  background: rgb(120, 2, 179);
  padding: 5px 10px ;
  margin: 5px;
  border-radius: 20px;
  border: 1px solid transparent;
}

#submit-btn:hover {
  color:rgb(0, 0, 0) ;
  background: rgb(240, 198, 13);
}
.timerBtn{

  background-color: #3cf8b0;
  color:black;
  align-self: center;

}
.timerBtn:hover{
  background-color: #dfdfdf;
  color:black;
}
.btnFin{
  background-color: #aaaaaa;
  color:black;
}
.btnFin:hover{
  background-color: #aaaaaa;
  color:black;
}
#formBtn{
  background-color: #f17500;
  color:black;
}
#formBtn:hover{
  background-color: #ffffff;
  color:rgb(255, 118, 6);
  border: 2px solid #da0404;
}
.restDone{
  background-color: #da0404;
  }

/*-------Default button settings----*/
bttn {
  border-radius: 10px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #da0404;
  cursor: pointer;
  transition: border-color 0.25s;
  width: 120px;
}
bttn:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

